feat: Add video support and enhance image processing in poster resizer
- Moved script to a new location with auto-detection of the BikininjasPosters directory.
- Implemented video support, allowing conversion of various formats to MP4.
- Updated handling for Poster2 to accept video files.
- Introduced a 'done' directory for organized file management post-processing.
- Enhanced .gitignore to exclude media files and virtual environments.
- Updated dependencies in requirements.txt to include Pillow and moviepy.
- Improved user interface with better feedback and processing progress.
- Created comprehensive documentation for virtual environment setup and usage.
- Added helper script for easier execution and environment management.
- Included README and input directory documentation for supported formats.

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,29 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Image Resizer - Input and Done directories (media files)
+image_resizer/input/*
+!image_resizer/input/README.md
+!image_resizer/input/.gitkeep
+image_resizer/done/*
+!image_resizer/done/.gitkeep
+image_resizer/temp-*.mp4
+image_resizer/temp-audio.m4a
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.egg-info/
+
+# Virtual Environments
+venv/
+env/
+ENV/
+.venv/
+image_resizer/venv/
+image_resizer/.venv/
+image_resizer/env/
