ci: Modernize GitHub Actions workflows
Adapted from lc_bikininjaPoltergeistSounds workflows with poster-specific changes. Updated to modern actions (@v5, @v7), fixed syntax errors, improved PR handling, and updated dependencies (seechela-CustomPosters-3.2.0). Changed category to asset-replacement and changelog icon to 🖼️.

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -5,9 +5,8 @@ documentation:
 posters:
 - changed-files:
   - any-glob-to-any-file: 
-    - 'BepInEx/plugins/LethalPaintings/paintings/*.png'
-    - 'BepInEx/plugins/LethalPosters/posters/*.png'
-    - 'BepInEx/plugins/LethalPosters/tips/*.png'
+    - 'BepInEx/plugins/BikininjasPosters*/posters/**'
+    - 'BepInEx/plugins/BikininjasPosters*/tips/**'
 
 cicd:
 - changed-files:
