ci: Fix changelog builder for first release
- Add failOnError: false to handle missing previous tags
- Add ignorePreReleases: false for complete history
- Add fetchViaCommits: true to use commit history when no tags exist

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,6 +104,9 @@ jobs:
           outputFile: "CHANGELOG.MD"
           token: ${{ secrets.GITHUB_TOKEN }}
           mode: "COMMIT"
+          failOnError: false
+          ignorePreReleases: false
+          fetchViaCommits: true
           configurationJson: |
             {
               "template": "#{{CHANGELOG}}\n\n<details>\n<summary>Uncategorized</summary>\n\n#{{UNCATEGORIZED}}\n</details>",
