fix: Update category for Thunderstore package from asset-replacement to posters

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -47,4 +47,4 @@ jobs:
           website: ${{ env.website_url }}
           repo: thunderstore.io
           categories: |
-            asset-replacement
+            posters
